# github-copilot-upgrading

.github/workflows/: test.yml
workshop/: COMPLETION_SUMMARY.md
workshop/upgraded/: pyproject.toml  setup.py
workshop/upgraded/guachi/: database.py
workshop/upgraded/guachi.egg-info/: PKG-INFO  SOURCES.txt
workshop/upgraded/guachi/tests/: test_database.py
