[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guachi"
version = "0.0.6"
description = "Global, persistent configurations as dictionaries"
readme = "README.rst"
authors = [
    {name = "Alfredo Deza", email = "alfredodeza@gmail.com"}
]
license = {text = "MIT"}
keywords = ["configuration", "management", "persistent", "dictionaries", "dictionary", "parse", "map", "mapping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "http://code.google.com/p/guachi"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["guachi"]
